--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="AFRICA%20MEGA%20GREEN%20ENGINEERING%20DEVELOPMENT_Home_files/style.css">
+        <link rel="stylesheet" href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Home_files/style.css">
         <title>AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Home</title>
         <meta name="description content= This is the description">
     </head>
@@ -11,16 +11,16 @@
 
                 <ul>
                     <li>
-                        <a href="file:///C:/Users/edwar/Documents/Web%20page%20development/home.html">HOME</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Home.html">HOME</a>
                     </li>
                     <li>
-                        <a href="file:///C:/Users/edwar/Documents/Web%20page%20development/about.html" target="_blank">ABOUT</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About.html" target="_blank">ABOUT</a>
                     </li>
                     <li>
-                        <a href="file:///C:/Users/edwar/Documents/Web%20page%20development/Services.html" target="_blank">SERVICES</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Services.html" target="_blank">SERVICES</a>
                     </li>
                     <li>
-                        <a href="file:///C:/Users/edwar/Documents/Web%20page%20development/Contact.html" target="_blank" class="header-4">CONTACT</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Contact.html" target="_blank" class="header-4">CONTACT</a>
                     </li>
                 </ul>
             </nav>
@@ -48,7 +48,7 @@ our professional lanscaping engineers and team).
                 
             </p>
         </section>
-        <img class="home-page-image" src="AFRICA%20MEGA%20GREEN%20ENGINEERING%20DEVELOPMENT_Home_files/AMGED3D.png" width="800" height="500">
+        <img class="home-page-image" src="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Home_files/AMGED3D.png" width="800" height="500">
         <footer>
             <div class="main-footer-container">
                 <h4 class="company-name">© 2020 AFRICA MEGA GREEN ENGINEERING DEVELOPMENT<br>(PTY) Ltd. All Rights Reserved.</h4>
@@ -64,7 +64,7 @@ our professional lanscaping engineers and team).
                     <div class="footer-heading footer-2">
                         <h2>Contact Us</h2>
                         <a href="#" target="_blank">Support</a>
-                        <a href="file:///C:/Users/edwar/Documents/Web%20page%20development/Contact.html" target="_blank">Contact</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Contact.html" target="_blank">Contact</a>
                     </div>
                     <div class="footer-heading footer-3">
                         <h2>Visit Us</h2>
