Update AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Contact.html
Changing Email address, contact number and location.

--- a/AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Contact.html
+++ b/AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Contact.html
@@ -35,11 +35,11 @@
                     <span class="Director-Info-Contact">
                         <strong>Director: Edward Coetzee</strong>
                         <br>
-                        E-mail: edwardcoetzee@amged.com
+                        E-mail: edocoetzeeamged@outlook.com
                         <br>
-                        Contact: 071 882 6720
+                        Contact: 067 854 1624
                         <br>
-                        Location: Upington
+                        Location: Keimoes
                         <br>
                         <a id="director-linkedin-page-btn" href="#" role="button" target="blank">Linkedin</a>
                         
