--- a/AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Contact.html
+++ b/AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="AFRICA%20MEGA%20GREEN%20ENGINEERING%20DEVELOPMENT_Contact_files/style.css">
+        <link rel="stylesheet" href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Contact_files/style.css">
         <title>AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Contact</title>
         <meta name="description content= This is the description">
     </head>
@@ -10,16 +10,16 @@
             <nav class="nav main-nav">
                 <ul>
                     <li>
-                        <a href="file:///C:/Users/edwar/Documents/Web%20page%20development/home.html" target="_blank">HOME</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Home.html" target="_blank">HOME</a>
                     </li>
                     <li>
-                        <a href="file:///C:/Users/edwar/Documents/Web%20page%20development/about.html" target="_blank">ABOUT</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About.html" target="_blank">ABOUT</a>
                     </li>
                     <li>
-                        <a href="file:///C:/Users/edwar/Documents/Web%20page%20development/Services.html" target="_blank">SERVICES</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Services.html" target="_blank">SERVICES</a>
                     </li>
                     <li>
-                        <a href="file:///C:/Users/edwar/Documents/Web%20page%20development/Contact.html" class="header-4">CONTACT</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Contact.html" class="header-4">CONTACT</a>
                     </li>
                 </ul>
             </nav>
@@ -30,7 +30,7 @@
             
             <p class="Director-info">
                     <span>
-                        <img class="Director-info-photo" src="AFRICA%20MEGA%20GREEN%20ENGINEERING%20DEVELOPMENT_Contact_files/E.jpg" width="100" height="150">  
+                        <img class="Director-info-photo" src="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Contact_files/E.jpg" width="100" height="150">  
                     </span>
                     <span class="Director-Info-Contact">
                         <strong>Director: Edward Coetzee</strong>
@@ -50,7 +50,7 @@
             
 
         </section>
-        <img class="home-page-image" src="AFRICA%20MEGA%20GREEN%20ENGINEERING%20DEVELOPMENT_Contact_files/AMGED3D.png" width="800" height="500">
+        <img class="home-page-image" src="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Contact_files/AMGED3D.png" width="800" height="500">
         <footer>
             <div class="main-footer-container">
                 <h4 class="company-name">© 2020 AFRICA MEGA GREEN ENGINEERING DEVELOPMENT<br>(PTY) Ltd. All Rights Reserved.</h4>
@@ -66,7 +66,7 @@
                     <div class="footer-heading footer-2">
                         <h2>Contact Us</h2>
                         <a href="#" target="_blank">Support</a>
-                        <a href="file:///C:/Users/edwar/Documents/Web%20page%20development/Contact.html" target="_blank">Contact</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Contact.html" target="_blank">Contact</a>
                     </div>
                     <div class="footer-heading footer-3">
                         <h2>Visit Us</h2>
