Update AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About.html
Changing href. links to other web pages.

--- a/AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About.html
+++ b/AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="AFRICA%20MEGA%20GREEN%20ENGINEERING%20DEVELOPMENT_About_files/style.css">
+        <link rel="stylesheet" href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About_files/style.css">
         <title>AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About</title>
         <meta name="description content= This is the description">
     </head>
@@ -10,16 +10,16 @@
             <nav class="nav main-nav">
                 <ul>
                     <li>
-                        <a href="file:///C:/Users/edwar/Documents/Web%20page%20development/home.html" target="_blank">HOME</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Home.html" target="_blank">HOME</a>
                     </li>
                     <li>
-                        <a href="file:///C:/Users/edwar/Documents/Web%20page%20development/about.html">ABOUT</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About.html">ABOUT</a>
                     </li>
                     <li>
-                        <a href="file:///C:/Users/edwar/Documents/Web%20page%20development/Services.html" target="_blank">SERVICES</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Services.html" target="_blank">SERVICES</a>
                     </li>
                     <li>
-                        <a href="file:///C:/Users/edwar/Documents/Web%20page%20development/Contact.html" target="_blank" class="header-4">CONTACT</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Contact.html" target="_blank" class="header-4">CONTACT</a>
                     </li>
                 </ul>
             </nav>
@@ -37,7 +37,7 @@ of our projects. After all, A Green World Is A Clean World.<br><br>
             
             </p>
         </section>
-        <img class="home-page-image" src="AFRICA%20MEGA%20GREEN%20ENGINEERING%20DEVELOPMENT_About_files/AMGED3D.png" width="800" height="500">
+        <img class="home-page-image" src="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About_files/AMGED3D.png" width="800" height="500">
         <footer>
             <div class="main-footer-container">
                 <h4 class="company-name">© 2020 AFRICA MEGA GREEN ENGINEERING DEVELOPMENT<br>(PTY) Ltd. All Rights Reserved.</h4>
@@ -53,7 +53,7 @@ of our projects. After all, A Green World Is A Clean World.<br><br>
                     <div class="footer-heading footer-2">
                         <h2>Contact Us</h2>
                         <a href="#" target="_blank">Support</a>
-                        <a href="file:///C:/Users/edwar/Documents/Web%20page%20development/Contact.html" target="_blank">Contact</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Contact.html" target="_blank">Contact</a>
                     </div>
                     <div class="footer-heading footer-3">
                         <h2>Visit Us</h2>
