--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
                 <ul>
                     <li>
-                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Home.html">HOME</a>
+                        <a href="index.html">HOME</a>
                     </li>
                     <li>
                         <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About.html" target="_blank">ABOUT</a>
