--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
                 <ul>
                     <li>
-                        <a href="index.html">HOME</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Home.html" target="_blank">HOME</a>
                     </li>
                     <li>
                         <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About.html" target="_blank">ABOUT</a>
@@ -48,7 +48,7 @@ our professional lanscaping engineers and team).
                 
             </p>
         </section>
-        <img class="home-page-image" src="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Home_files/AMGED3D.png" width="800" height="500">
+        <img class="home-page-image" src="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Home_files/AMGED2D.jpg" width="800" height="500">
         <footer>
             <div class="main-footer-container">
                 <h4 class="company-name">© 2020 AFRICA MEGA GREEN ENGINEERING DEVELOPMENT<br>(PTY) Ltd. All Rights Reserved.</h4>
@@ -57,8 +57,9 @@ our professional lanscaping engineers and team).
                 <div class="footer">
                     <div class="footer-heading footer-1">
                         <h2>About Us</h2>
-                        <a href="#" target="_blank">Archived Projects</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Archived.html" target="_blank">Archived Projects</a>
                         <a href="#" target="_blank">Vacancies</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Newsletter.html" target="_blank">Newsletter</a>
                         
                     </div>
                     <div class="footer-heading footer-2">
@@ -70,6 +71,7 @@ our professional lanscaping engineers and team).
                         <h2>Visit Us</h2>
                         <a href="#" target="_blank">Linkedin</a>
                         <a href="#" target="_blank">Youtube</a>
+                        <a href="#" target="_blank">Instagram</a>
                     </div>
                     <div class="footer-email-form">
                         <h2>Join Our Newsletter</h2>
