--- a/AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About.html
+++ b/AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About.html
@@ -10,7 +10,7 @@
             <nav class="nav main-nav">
                 <ul>
                     <li>
-                        <a href="index.html" target="_blank">HOME</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Home.html" target="_blank">HOME</a>
                     </li>
                     <li>
                         <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About.html">ABOUT</a>
@@ -37,7 +37,7 @@ of our projects. After all, A Green World Is A Clean World.<br><br>
             
             </p>
         </section>
-        <img class="home-page-image" src="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About_files/AMGED3D.png" width="800" height="500">
+        <img class="home-page-image" src="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About_files/AMGED2D.jpg" width="800" height="500">
         <footer>
             <div class="main-footer-container">
                 <h4 class="company-name">© 2020 AFRICA MEGA GREEN ENGINEERING DEVELOPMENT<br>(PTY) Ltd. All Rights Reserved.</h4>
@@ -46,8 +46,9 @@ of our projects. After all, A Green World Is A Clean World.<br><br>
                 <div class="footer">
                     <div class="footer-heading footer-1">
                         <h2>About Us</h2>
-                        <a href="#" target="_blank">Archived Projects</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Archived.html" target="_blank">Archived Projects</a>
                         <a href="#" target="_blank">Vacancies</a>
+                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Newsletter.html" target="_blank">Newsletter</a>
                         
                     </div>
                     <div class="footer-heading footer-2">
@@ -59,6 +60,7 @@ of our projects. After all, A Green World Is A Clean World.<br><br>
                         <h2>Visit Us</h2>
                         <a href="#" target="_blank">Linkedin</a>
                         <a href="#" target="_blank">Youtube</a>
+                        <a href="#" target="_blank">Instagram</a>
                     </div>
                     <div class="footer-email-form">
                         <h2>Join Our Newsletter</h2>
