--- a/AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Building.html
+++ b/AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Building.html
@@ -13,7 +13,7 @@
         <nav class="nav main-nav">
             <ul>
                 <li>
-                    <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Home.html" target="_blank">HOME</a>
+                     <a href="index.html" target="_blank">HOME</a>
                 </li>
                 <li>
                     <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About.html" target="_blank">ABOUT</a>
