--- a/AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About.html
+++ b/AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About.html
@@ -10,7 +10,7 @@
             <nav class="nav main-nav">
                 <ul>
                     <li>
-                        <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_Home.html" target="_blank">HOME</a>
+                         <a href="index.html" target="_blank">HOME</a>
                     </li>
                     <li>
                         <a href="AFRICA MEGA GREEN ENGINEERING DEVELOPMENT_About.html">ABOUT</a>
